# AlphaQuant

./: ARCHITECTURE_AUDIT.md  MIGRATION_REPORT.md  app.py  app1.py  app_backup_before_codex.py  appemergentquant_v3_1.py  apprelitfinal.py  news_intelligence.py  requirements.txt  upstox_test.py
.cache/: news_earnings_cache.json
AlphaQuant_OS_v1_Final/alphaquant-project/alphaquant/: ALPHAQUANT_OS_PHASE1_REPORT.md  ALPHAQUANT_OS_V1_REPORT.md  PHASE1_VALIDATION_REPORT.md  PHASE2_BATCH2_REPORT.md  apprelit.py
AlphaQuant_OS_v1_Final/alphaquant-project/alphaquant/os_brains/: experience_memory.py  strategist.py
AlphaQuant_OS_v1_Final_Source (1)/: .replit  pyproject.toml
AlphaQuant_OS_v1_Final_Source (1)/alphaquant/: ALPHAQUANT_OS_ARCHITECTURE.md  FINAL_PROJECT_REPORT.md  PHASE2_BATCH1_REPORT.md  Phase3_Architecture_Report.md  apprelitfinal.py
AlphaQuant_OS_v1_Final_Source (1)/alphaquant/os_brains/: backfill.py  historical_analog_engine.py  market_historian.py  reviewer.py  setup_vector.py
docs/: ALPHAQUANT_DESIGN_SYSTEM.md  PRODUCTIZATION_VALIDATION_REPORT.md  RC1_ENGINEERING_AUDIT.md
os_brains/: __init__.py  db.py  experience_memory.py  market_observer.py  pipeline_manager.py  portfolio_manager.py  risk_manager.py
