[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.4,<2.3",
    "pandas>=2.3.2,<3",
    "pandas-ta>=0.4.71b0",
    "psycopg2-binary>=2.9.12",
    "streamlit>=1.59.2",
    "yfinance>=1.5.1",
]
